# py-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  mkdoc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yaml  publish.yaml
examples/: advance_usage.py  basic_usage.py  integrations.py
py_agent_client/: __init__.py  client.py  exceptions.py  models.py
py_agent_client/core/: __init__.py  context_manager.py  cost_guardian.py  router.py  telemetry.py
py_agent_client/providers/: __init__.py  anthropic_adapter.py  deepseek_adapter.py  openai_adapter.py
tests/: __init__.py  conftest.py  test_client.py  test_cost_guardian.py
